<resources>
    <string name="app_name">new bag shop</string>
    <string name="welcome">WELCOME</string>
    <string name="our_new_shop">Our new shop</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="register">REGISTER</string>
    <string name="new_user_to_app">New user to app</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="comfirm_your_password">Comfirm Your Password</string>
    <string name="registerbtn">Register</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="title_activity_logging">Logging</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="delivery_charge">Delivery Charge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
</resources>